# platypus

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  package.json  tsconfig.json
platypus-backend/: package.json
platypus-backend/src/: errors.ts  index.ts  server.ts  types.ts
platypus-daemon/: Cargo.toml  README.md
platypus-daemon/src/: main.rs  socket.rs
platypus-frontend/: package.json
platypus-gateway/: package.json
platypus-gateway/src/: client.ts  gateway.ts  index.ts  logger.ts  packets.ts
shared/: package.json
shared/src/: types.ts
