[package]
name = "platypus-daemon"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbor = "0.4"
clap = "3.0.0-beta.4"
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
rustc-serialize = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.11.0", features = ["full"] }
tokio-tungstenite = "0.15"
